import { expect, it } from "vitest";
import { tryFormatFile } from ".";
import { resolve } from "path";
const reslovePath = (path: string) => {
  return resolve(process.cwd(), path);
};
it("test format vue sfc", async () => {
  const result = await tryFormatFile(reslovePath("src/examples/vue/index.vue"));
  expect(result).toMatchSnapshot();
});

it("test format vue sfc-setup", async () => {
  const result = await tryFormatFile(
    reslovePath("src/examples/vue/setupVue.vue")
  );
  expect(result).toMatchSnapshot();
});

it("test format typescript", async () => {
  const result = await tryFormatFile(reslovePath("src/examples/ts/index.ts"));
  expect(result).toMatchSnapshot();
});
it("test format deepObject", async () => {
  const result = await tryFormatFile(reslovePath("src/examples/ts/deepObj.ts"));
  expect(result).toMatchSnapshot();
});

it("test format javascript", async () => {
  const result = await tryFormatFile(reslovePath("src/examples/js/index.js"));
  expect(result).toMatchSnapshot();
});
it("test dynamic typescript", async () => {
  const result = await tryFormatFile(
    reslovePath("src/examples/ts/dy-import.ts")
  );
  expect(result).toMatchSnapshot();
});
