// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test dynamic typescript 1`] = `
"import { RouteRecordRaw } from "vue-router";

export const exampleRoute = [
  {
    path: "/iconTest",
    name: "IconTest",
    component: () => import("@/example/icon/index.vue"),
  },
  {
    path: "/imgDown",
    name: "ImgDown",
    component: () => import("@/views/imgDown/index.vue"),
  },
  {
    path: "/animateList",
    name: "AnimateList",
    component: () => import("@/views/example/AnimateList/index.vue"),
  },
];

export const formatterRoute = (routes: RouteRecordRaw[]) => {
  return routes.map((item) => {
    return { ...item, path: "/:menuId" + item.path };
  });
};
"
`;

exports[`test format deepObject 1`] = `
"export const fn = () => {
  const NOT_NULL_CONST = "NOT_NULL_CONST";
  const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
  const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

  const a = 1;
  const foo = 2;
  const bar = 3;
  const baz = 4;

  return {
    a,
    foo,
    baz,
    bar,
    subObj: {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    },
    NOT_NULL_CONST,
    NOT_NULL_CONST2,
    SELECT_NOT_NULL_CONST,
  };
};
"
`;

exports[`test format javascript 1`] = `
"export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
"
`;

exports[`test format typescript 1`] = `
"export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
"
`;

exports[`test format vue sfc 1`] = `
"<template>
  <div class="flex">
    <el-button type="primary"> submit </el-button>
  </div>
</template>

<script lang="ts">
import { defineComponent } from "vue";
export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
</script>

<style lang="scss" scoped>
.flex {
  display: flex;
}
</style>
"
`;

exports[`test format vue sfc-setup 1`] = `
"<template>
  <div class="flex">
    <el-button type="primary"> submit </el-button>
  </div>
</template>

<script lang="ts" setup>
const fn = () => {
  const NOT_NULL_CONST = "NOT_NULL_CONST";
  const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
  const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

  const a = 1;
  const foo = 2;
  const bar = 3;
  const baz = 4;
  return {
    a,
    foo,
    baz,
    bar,
    NOT_NULL_CONST,
    NOT_NULL_CONST2,
    SELECT_NOT_NULL_CONST,
  };
};
</script>

<style lang="scss" scoped>
.flex {
  display: flex;
}
</style>
"
`;
